<resources>
    <string name="app_name">Toddler</string>
    <string name="ans_a">A</string>
    <string name="ans_b">B</string>
    <string name="ans_c">C</string>
    <string name="ans_d">D</string>
    <string name="ans_true">V</string>
    <string name="ans_false">F</string>
    <string name="talk_question">Ler Questão</string>
    <string name="talk_content">Ler Conteúdo</string>
    <string name="next">Próxima</string>
    <string name="previous">Anterior</string>
    <string name="start_content">Iniciar Conteúdo</string>
    <string name="start_quiz">Iniciar Quiz</string>
    <string name="content_end">Você terminou a lição.\nVá para o início e faça os exercícios</string>
    <string name="prev_symbol"><![CDATA[<]]></string>
    <string name="next_symbol"><![CDATA[>]]></string>
    <string name="exercise_x_of_y">Exercício X de Y</string>
    <string name="question_dummy">Qual é a resposta?</string>
    <string name="appbar_scrolling_view_behavior">Teste</string>

    <string-array name="navigation_drawer_items_array">
        <item>Luana</item>
        <item>Aulas</item>
        <item>Exercícios</item>
        <item>Conquistas</item>
    </string-array>

</resources>