<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MultipleChoiceActivity">

    <TextView
        android:id="@+id/exercise_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toTopOf="@id/question"
        android:layout_marginBottom="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/talk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="readQuestion"
        android:text="@string/talk_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/question"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/ans_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginStart="75dp"
        android:onClick="answerA"
        android:text="@string/ans_a"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question" />

    <Button
        android:id="@+id/ans_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="answerB"
        android:text="@string/ans_b"
        android:layout_marginEnd="75dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ans_a" />

    <Button
        android:id="@+id/ans_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans_c"
        app:layout_constraintLeft_toLeftOf="@id/ans_a"
        app:layout_constraintTop_toBottomOf="@id/ans_a"
        android:layout_marginTop="75dp"
        android:onClick="answerC" />

    <Button
        android:id="@+id/ans_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans_d"
        app:layout_constraintLeft_toLeftOf="@id/ans_b"
        app:layout_constraintTop_toBottomOf="@id/ans_b"
        android:layout_marginTop="75dp"
        android:onClick="answerD" />

    <Button
        android:id="@+id/next"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/next_symbol"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        android:background="@drawable/round_button"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="25dp"
        android:onClick="next" />

    <Button
        android:id="@+id/previous"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/prev_symbol"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        android:background="@drawable/round_button"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:onClick="previous" />


</androidx.constraintlayout.widget.ConstraintLayout>